--- a/sm/sm-my-community/main/default/lwc/sm_assetCard/sm_assetCard.html
+++ b/sm/sm-my-community/main/default/lwc/sm_assetCard/sm_assetCard.html
@@ -22,15 +22,13 @@
           <div class="slds-grid slds-grid_vertical-align-center">
             <div class="slds-col">
               <lightning-formatted-number
-                value={asset.currentAmount}
+                value={asset.totalLifecycleAmount}
                 currency-code={asset.currencyIsoCode}
                 format-style="currency"
-                maximum-fraction-digits="0"
+                maximum-fraction-digits="2"
                 minimum-fraction-digits="0"
               ></lightning-formatted-number
-              >&nbsp;
-              <template if:true={isOngoingEvergreen}>/ Month</template>
-              <template if:false={isOngoingEvergreen}>Total</template>
+              >&nbsp; Total
             </div>
             <div class="slds-col slds-p-bottom_x-small">
               <lightning-button-menu
