Temp switch handleAddToCart to handlePlaceOrder

--- a/sm/sm-my-community/main/default/lwc/sm_CommunityCheckout/sm_CommunityCheckout.html
+++ b/sm/sm-my-community/main/default/lwc/sm_CommunityCheckout/sm_CommunityCheckout.html
@@ -9,7 +9,7 @@
         <div class="slds-col slds-p-bottom_x-large">
           <div class="slds-grid slds-gutters slds-grid_align-spread">
             <lightning-button
-              onclick={handleAddToCart}
+              onclick={handlePlaceOrder}
               variant="neutral"
               label="Add To Cart"
               title="Add To Cart"
