add current quantity to component list view

--- a/sm/sm-asset-management/main/default/lwc/assetManagementRelated/assetManagementRelated.html
+++ b/sm/sm-asset-management/main/default/lwc/assetManagementRelated/assetManagementRelated.html
@@ -27,7 +27,7 @@
                     </header>
                     <div class="slds-modal__content slds-var-p-around_medium" id="modal-content-id-1">
                         <lightning-input type="date" name="input" label="Please Select Valid Cancellation Date"
-                            onchange={handleDate}></lightning-input>
+                            onchange={handleCancelDate}></lightning-input>
                     </div>
                     <footer class="slds-modal__footer">
                         <lightning-button-group>
@@ -53,7 +53,7 @@
                     </header>
                     <div class="slds-modal__content slds-var-p-around_medium" id="modal-content-id-2">
                         <lightning-input type="date" name="input" label="Please Select Valid Amendment Date"
-                            onchange={handleDate}></lightning-input>
+                            onchange={handleAmendDate}></lightning-input>
                         <lightning-input type="number" name="quantity" label="Please Enter Quantity" placeholder="Please Enter Quantity"
                             onchange={handleQuantity}></lightning-input>
                     </div>
