remove add to cart, align checkout right

--- a/sm/sm-my-community/main/default/lwc/sm_CommunityCheckout/sm_CommunityCheckout.html
+++ b/sm/sm-my-community/main/default/lwc/sm_CommunityCheckout/sm_CommunityCheckout.html
@@ -7,14 +7,14 @@
           onproductsselected={handleProductSelect}
         ></c-sm_product-catalog>
         <div class="slds-col slds-p-bottom_x-large">
-          <div class="slds-grid slds-gutters slds-grid_align-spread">
-            <lightning-button
+          <div class="slds-grid slds-gutters slds-grid_align-end">
+<!--             <lightning-button
               onclick={handlePlaceOrder}
               variant="neutral"
               label="Add To Cart"
               title="Add To Cart"
               disabled={buyDisabled}
-            ></lightning-button>
+            ></lightning-button> -->
             <lightning-button
               onclick={handlePlaceOrder}
               variant="brand"
