Add state label to checkout component

--- a/sm/sm-my-community/main/default/lwc/sm_checkoutDetails/sm_checkoutDetails.html
+++ b/sm/sm-my-community/main/default/lwc/sm_checkoutDetails/sm_checkoutDetails.html
@@ -50,7 +50,7 @@
             street-label="Street"
             city-label="City"
             country-label="Country"
-            province-label="Province"
+            province-label="State/Province"
             postal-code-label="PostalCode"
             street={address.street}
             city={address.city}
