--- a/sm/sm-b2b-connector/main/default/lwc/b2b_featureProduct/b2b_featureProduct.html
+++ b/sm/sm-b2b-connector/main/default/lwc/b2b_featureProduct/b2b_featureProduct.html
@@ -11,7 +11,7 @@
                                         alternative-text="Utility diamond" title="diamond"></lightning-icon>
                                     <h3 class="sub-caption Headline2_CiscoSansBold">{productName}</h3>
                                 </div>
-                                <p style="margin:0px;" class="price-caption Headline2_CiscoSansBold">${productPrice}</p>
+                                <p style="margin:0px;" class="price-caption Headline2_CiscoSansBold">{userCurrency} {productPrice}</p>
                                 <p style="margin:0px;" class="price-caption">{sellingModal}</p>
                                
                                 <p class="product-description Headline4_CiscoSans">{description}</p>
