--- a/sm/sm-b2b-connector/main/default/lwc/homeFeatured/homeFeatured.html
+++ b/sm/sm-b2b-connector/main/default/lwc/homeFeatured/homeFeatured.html
@@ -20,6 +20,8 @@
                             feature-five={product.feature5}   
                             description={product.Description}
                             selling-modal={product.sellingModalName}
+                            user-currency={product.usrCurrency}
+                           
                             >
                         </c-b2b-_feature-product>
                     </div>
