temp remove billingschedule reference for subs

--- a/sm/sm-b2b-connector/main/default/lwc/manageSubscription/manageSubscription.html
+++ b/sm/sm-b2b-connector/main/default/lwc/manageSubscription/manageSubscription.html
@@ -6,7 +6,7 @@
     <section class="shopping-cart-section">
         <div class="container wide">
             <div class="section-caption">
-                <h1 class="sc-title big">Orders</h1>
+                <h1 class="sc-title big">Install Base</h1>
             </div>
 
             <table class="table md-hidden">
