sm community cleanup

--- a/sm/sm-my-community/main/default/lwc/sm_invoiceCard/sm_invoiceCard.html
+++ b/sm/sm-my-community/main/default/lwc/sm_invoiceCard/sm_invoiceCard.html
@@ -27,14 +27,14 @@
             class="slds-theme_error"
           ></lightning-badge>
         </template>
-        <lightning-button
+<!--         <lightning-button
           slot="actions"
           onclick={openPayPopupHandler}
           variant="brand-outline"
           label="Make Payment"
           title="Make Payment"
           icon-name="standard:partner_fund_claim"
-        ></lightning-button>
+        ></lightning-button> -->
       </div>
     </template>
     <div class="slds-card__body slds-card__body_inner">
